<resources>
    <string name="app_name">figma1(hi_app)</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="hi_fix">Hi Fix</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="here_to_get_nwelcome">Here To Get\nWelcome!</string>
    <string name="create_a_password">Create a password</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="verification">Verification</string>
    <string name="verification1">Verification</string>
    <string name="enter_the_code_sent_to">Enter the code sent to</string>
    <string name="your_mobile_phone">Your mobile phone</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the CODE?</string>
    <string name="resend_code">Resend CODE</string>
</resources>